# rune_plugin_sdk

./: .gitignore  CMakeLists.txt
examples/config_plugin/: CMakeLists.txt  plugin.json
examples/config_plugin/src/: config_plugin.cpp
examples/env_plugin/: CMakeLists.txt  plugin.json
examples/env_plugin/src/: env_plugin.cpp
examples/math_plugin/: CMakeLists.txt  plugin.json
examples/math_plugin/src/: math_plugin.cpp
examples/timer_plugin/: CMakeLists.txt  plugin.json
examples/timer_plugin/src/: timer_plugin.cpp
include/: plugin_api.h  rune_plugin.h
